--- a/Algoritmos_R1.ipynb
+++ b/Algoritmos_R1.ipynb
@@ -260,18 +260,79 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
+      "cell_type": "markdown",
+      "source": [
+        "* Conjunto de candidatos (C): En el problema del cambio de monedas, el conjunto de candidatos es el conjunto de monedas disponibles que podemos utilizar para dar cambio. Por ejemplo, si las monedas disponibles son de 1, 2, 5, 10, 20, 50, 100, 500.\n",
+        "\n",
+        "* Función solución: En cada paso, la función solución verifica si hemos alcanzado el monto deseado utilizando las monedas seleccionadas. Por ejemplo, si queremos dar cambio de 47 unidades y ya hemos seleccionado monedas que suman 47 unidades, entonces hemos encontrado una solución.\n",
+        "\n",
+        "* Función de selección: La función de selección en el problema del cambio de monedas consiste en seleccionar la moneda de mayor valor disponible que no exceda el monto restante. Por ejemplo, si el monto restante es 47 y las monedas disponibles son de 1, 2, 5, 10, 20, 50, 100, 500, entonces seleccionamos la moneda de 20, ya que es la de mayor valor que no excede 47.\n",
+        "\n",
+        "* Función de factibilidad: Esta función determina si, dado un conjunto de monedas seleccionadas y una moneda candidata, podemos llegar a una solución. En el caso del cambio de monedas, siempre podemos llegar a una solución, ya que podemos utilizar cualquier combinación de monedas disponibles para formar el cambio.\n",
+        "\n",
+        "* Función objetivo: El objetivo del problema del cambio de monedas es minimizar el número de monedas utilizadas para dar el cambio. En otras palabras, queremos minimizar la cantidad de monedas necesarias para alcanzar el monto deseado."
+      ],
       "metadata": {
-        "id": "uJtftBLU4-ap"
+        "id": "B0TFjdHMsrsO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 28,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uJtftBLU4-ap",
+        "outputId": "5d0fc119-8b88-4ba3-d090-d5df41bf7765"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Ingrese el monto a cambiar: a\n",
+            "Error: Por favor, ingrese números enteros para el monto y las monedas.\n",
+            "Ingrese el monto a cambiar: 475\n",
+            "Ingrese las monedas disponibles separadas por espacios: 1 10 100 120 5\n",
+            "Cambio:\n",
+            "3 moneda(s) de 120\n",
+            "1 moneda(s) de 100\n",
+            "1 moneda(s) de 10\n",
+            "1 moneda(s) de 5\n"
+          ]
+        }
+      ],
       "source": [
         "# Problema del cambio de moneda\n",
         "\n",
+        "def cambio_de_moneda():\n",
+        "    while True:\n",
+        "        try:\n",
+        "            # Solicitar al usuario el monto y las monedas disponibles\n",
+        "            monto = int(input(\"Ingrese el monto a cambiar: \"))\n",
+        "            monedas_input = input(\"Ingrese las monedas disponibles separadas por espacios: \").split()\n",
+        "            monedas = [int(moneda) for moneda in monedas_input]  # Convertir las monedas a enteros\n",
+        "            monedas.sort(reverse=True)  # Ordenar las monedas de mayor a menor valor\n",
+        "            break\n",
+        "        except ValueError:\n",
+        "            print(\"Error: Por favor, ingrese números enteros para el monto y las monedas.\")\n",
         "\n",
+        "    # Calcular el cambio\n",
+        "    cambio = {}\n",
+        "    for moneda in monedas:\n",
+        "        cantidad = monto // moneda\n",
+        "        if cantidad > 0:\n",
+        "            cambio[moneda] = cantidad\n",
+        "            monto -= cantidad * moneda\n",
         "\n",
-        "\n"
+        "    return cambio\n",
+        "\n",
+        "# Obtener el cambio y mostrarlo al usuario\n",
+        "cambio = cambio_de_moneda()\n",
+        "print(\"Cambio:\")\n",
+        "for moneda, cantidad in cambio.items():\n",
+        "    print(f\"{cantidad} moneda(s) de {moneda}\")"
       ]
     },
     {
@@ -285,28 +346,117 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "FqOPyCmv_K65"
-      },
-      "outputs": [],
+      "cell_type": "markdown",
       "source": [
-        "# Problema de las N-Reinas\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
-      ]
+        "* El algoritmo de backtracking comienza probando todas las posibles combinaciones de colocación de reinas y retrocede (backtracks) cuando encuentra una solución inválida, buscando otras combinaciones posibles. Esto se repite hasta que se encuentre una solución válida o se hayan probado todas las combinaciones posibles."
+      ],
+      "metadata": {
+        "id": "QqGWSnId2JGV"
+      }
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 63,
       "metadata": {
-        "id": "vqMHXLJS9Y21"
+        "id": "FqOPyCmv_K65",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "31dd7af9-2d15-467d-ff7c-44d43823d7c7"
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "Por favor ingrese la cantidad de números a evaluar: 10\n",
+            "Solución encontrada para el tablero de dimensiones 10\n",
+            "♕ x x x x x x x x x\n",
+            "x x ♕ x x x x x x x\n",
+            "x x x x x ♕ x x x x\n",
+            "x x x x x x x ♕ x x\n",
+            "x x x x x x x x x ♕\n",
+            "x x x x ♕ x x x x x\n",
+            "x x x x x x x x ♕ x\n",
+            "x ♕ x x x x x x x x\n",
+            "x x x ♕ x x x x x x\n",
+            "x x x x x x ♕ x x x\n"
+          ]
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ],
+      "source": [
+        "# Problema de las N-Reinas\n",
+        "\n",
+        "# Validación del valor de entrada\n",
+        "while True:\n",
+        "    try:\n",
+        "        n = int(input(\"\\nPor favor ingrese la cantidad de números a evaluar: \"))\n",
+        "        if n <= 0:\n",
+        "            print(\"\\nEl número debe ser mayor que cero. Inténtalo de nuevo.\")\n",
+        "        else:\n",
+        "            break\n",
+        "    except ValueError:\n",
+        "        print(\"\\nPor favor, ingresa un número entero.\")\n",
+        "\n",
+        "def es_seguro(tablero, fila, columna, N):\n",
+        "    # Verificar si hay una reina en la misma columna en las filas anteriores\n",
+        "    for i in range(fila):\n",
+        "        if tablero[i][columna] == '♕':\n",
+        "            return False\n",
+        "\n",
+        "    # Verificar si hay una reina en la misma diagonal superior izquierda\n",
+        "    for i, j in zip(range(fila, -1, -1), range(columna, -1, -1)):\n",
+        "        if tablero[i][j] == '♕':\n",
+        "            return False\n",
+        "\n",
+        "    # Verificar si hay una reina en la misma diagonal superior derecha\n",
+        "    for i, j in zip(range(fila, -1, -1), range(columna, n)):\n",
+        "        if tablero[i][j] == '♕':\n",
+        "            return False\n",
+        "    return True\n",
+        "\n",
+        "def resolver_n_reinas_util(tablero, fila, n):\n",
+        "    if fila >= n:\n",
+        "        return True\n",
+        "\n",
+        "    for i in range(n):\n",
+        "        if es_seguro(tablero, fila, i, n):\n",
+        "            tablero[fila][i] = '♕'\n",
+        "            if resolver_n_reinas_util(tablero, fila + 1, n):\n",
+        "                return True\n",
+        "            tablero[fila][i] = 'x'\n",
+        "\n",
+        "    return False\n",
+        "\n",
+        "def resolver_n_reinas(n):\n",
+        "    if n < 4:\n",
+        "        print(\"No hay solución para el tablero de dimensiones\", n, \"debido a que el tamaño del tablero es demasiado pequeño.\")\n",
+        "        return False\n",
+        "\n",
+        "    tablero = [['x'] * n for _ in range(n)]\n",
+        "\n",
+        "    if not resolver_n_reinas_util(tablero, 0, n):\n",
+        "        print(\"No hay solución para el tablero de dimensiones\", n, \"debido a la disposición de las filas.\")\n",
+        "        return False\n",
+        "\n",
+        "    print(\"Solución encontrada para el tablero de dimensiones\", n)\n",
+        "    for fila in tablero:\n",
+        "        print(' '.join(fila))\n",
+        "    return True\n",
+        "\n",
+        "resolver_n_reinas(n)"
+      ]
     }
   ],
   "metadata": {
