--- a/Algoritmos_R1.ipynb
+++ b/Algoritmos_R1.ipynb
@@ -20,7 +20,7 @@
         "\n",
         "Nombre: Jose Antonio Gómez Vargas\n",
         "\n",
-        "Github: rewrwer"
+        "Github: [Enlace directo a Github](https://github.com/jagvgithub/Algortimos_optimizacion_VIU/blob/main/Algoritmos_R1.ipynb)"
       ]
     },
     {
