--- a/Algoritmos_R1.ipynb
+++ b/Algoritmos_R1.ipynb
@@ -20,7 +20,9 @@
         "\n",
         "Nombre: Jose Antonio Gómez Vargas\n",
         "\n",
-        "Github: [Enlace directo a Github](https://github.com/jagvgithub/Algortimos_optimizacion_VIU/blob/main/Algoritmos_R1.ipynb)"
+        "Github: [Enlace directo a Github](https://github.com/jagvgithub/Algortimos_optimizacion_VIU/blob/main/Algoritmos_R1.ipynb)\n",
+        "\n",
+        "- https://github.com/jagvgithub/Algortimos_optimizacion_VIU/blob/main/Algoritmos_R1.ipynb"
       ]
     },
     {
@@ -86,7 +88,7 @@
       "metadata": {
         "id": "h48LpQiO_KAg"
       },
-      "execution_count": 65,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +115,7 @@
         "id": "dRbPJBnz_Vlw",
         "outputId": "267febfd-eb11-4f34-d817-27f931b15ff6"
       },
-      "execution_count": 68,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -177,7 +179,7 @@
         "id": "eADuHS_K_WkZ",
         "outputId": "81e21a6f-ac2c-48f0-a95e-22abcfa01c3b"
       },
-      "execution_count": 69,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,7 +250,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 70,
+      "execution_count": null,
       "metadata": {
         "id": "74qZZAekiNYR"
       },
@@ -347,7 +349,7 @@
         "id": "veHNrb9BAcrN",
         "outputId": "7f4d1880-6c94-4047-9f7e-dabd8708e355"
       },
-      "execution_count": 74,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -397,7 +399,7 @@
         "id": "Ih1kcIXLAepp",
         "outputId": "469d83ce-dad9-4d7b-8a84-53102b9604c3"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -483,7 +485,7 @@
       "metadata": {
         "id": "0YnYCh2JByg8"
       },
-      "execution_count": 76,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -511,7 +513,7 @@
         "id": "umsMi3KSB24z",
         "outputId": "c4101233-e740-4a88-da19-e901e12b1d3d"
       },
-      "execution_count": 78,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +554,7 @@
         "id": "3LA_IU5cCWiw",
         "outputId": "d6401c18-0cb4-4a39-b868-fccb51345a17"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -652,7 +654,7 @@
       "metadata": {
         "id": "mF6toqoRC5--"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -679,7 +681,7 @@
         "id": "LIpEHYyyC_TA",
         "outputId": "d6d37744-f3a7-44d7-b90f-6d7c0bc56aec"
       },
-      "execution_count": 81,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -721,7 +723,7 @@
         "id": "0rZUq4yTDDQM",
         "outputId": "15a1426a-af32-4c3f-f2bb-9edf8da19e3a"
       },
-      "execution_count": 82,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -756,7 +758,7 @@
         "id": "xDILJH-xDHVf",
         "outputId": "4cfedfe5-6c61-475b-b7a9-3576e6800352"
       },
-      "execution_count": 84,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
