--- a/Seminario_Algoritmos.ipynb
+++ b/Seminario_Algoritmos.ipynb
@@ -78,8 +78,6 @@
     {
       "cell_type": "code",
       "source": [
-        "%%time\n",
-        "\n",
         "# creación de funciones necesarias dentro del algoritmo\n",
         "\n",
         "def generar_expresiones(numeros, operadores):\n",
@@ -133,11 +131,11 @@
         "print(df)\n"
       ],
       "metadata": {
-        "id": "9I29clTpiHec",
-        "outputId": "8b5f8b24-3787-47dd-998a-7f84a429afad",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "9I29clTpiHec",
+        "outputId": "8b5f8b24-3787-47dd-998a-7f84a429afad"
       },
       "execution_count": 80,
       "outputs": [
@@ -564,7 +562,44 @@
         "id": "xFIJrOwKi2Ti"
       },
       "source": [
-        "Respuesta"
+        "Para determinar cuál es la mejor estructura de datos para este problema, consideremos los requisitos y las operaciones que necesitamos realizar:\n",
+        "\n",
+        "*Almacenamiento y Acceso Secuencial:* Necesitamos almacenar todas las posibles expresiones y sus resultados. El acceso secuencial es necesario para evaluar cada expresión y comparar el resultado con el valor objetivo.\n",
+        "\n",
+        "*Flexibilidad en el Tamaño:* Dado que el número de combinaciones posibles puede\n",
+        "ser muy grande, necesitamos una estructura de datos que pueda crecer dinámicamente.\n",
+        "\n",
+        "* Listas\n",
+        "\n",
+        "Las listas son una buena opción para este problema porque cumplen con los requisitos mencionados:\n",
+        "\n",
+        "*Acceso Secuencial:* Nos permiten iterar fácilmente sobre las expresiones y resultados.\n",
+        "*Almacenamiento Dinámico:* Podemos agregar elementos sin necesidad de definir su tamaño previamente.\n",
+        "\n",
+        "*Flexibilidad:* Manejan cualquier número de elementos, lo cual es útil para un gran número de combinaciones.\n",
+        "Además, las listas en Python tienen un buen rendimiento para la mayoría de las operaciones básicas (como agregar elementos y acceder a ellos secuencialmente), lo cual es suficiente para este problema.\n",
+        "\n",
+        "---\n",
+        "Diferencias entre Fuerza Bruta y Divide y Vencerás\n",
+        "\n",
+        "---\n",
+        "\n",
+        "\n",
+        "- Fuerza Bruta\n",
+        "\n",
+        "Método: Prueba todas las combinaciones posibles sin ninguna optimización.\n",
+        "\n",
+        "Ventajas: Simple de implementar.\n",
+        "\n",
+        "Desventajas: Muy ineficiente para problemas de gran tamaño debido al alto número de combinaciones posibles.\n",
+        "\n",
+        "- Divide y Vencerás\n",
+        "\n",
+        "Método: Divide el problema en subproblemas más pequeños, resuelve cada uno independientemente y luego combina las soluciones.\n",
+        "\n",
+        "Ventajas: Puede reducir significativamente el tiempo de ejecución al simplificar el problema y permitir soluciones más rápidas a subproblemas más pequeños.\n",
+        "\n",
+        "Desventajas: Puede ser más complejo de implementar."
       ]
     },
     {
@@ -575,8 +610,7 @@
       "source": [
         "Según el modelo para el espacio de soluciones<br>\n",
         "(*)¿Cual es la función objetivo?\n",
-        "\n",
-        "(*)¿Es un problema de maximización o minimización?"
+        "\n"
       ]
     },
     {
@@ -591,20 +625,20 @@
     {
       "cell_type": "markdown",
       "source": [
+        "(*)¿Es un problema de maximización o minimización?"
+      ],
+      "metadata": {
+        "id": "TXkffH04vKbx"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "Este problema no implica la optimización de una función objetivo para encontrar el máximo o el mínimo valor. En lugar de eso, el objetivo es encontrar todas las combinaciones posibles de números y operadores cuyo resultado, al ser evaluado, coincida con un valor particular proporcionado. Por lo tanto, no puede clasificarse estrictamente como un problema de maximización o minimización, ya que no estamos buscando optimizar una función objetivo en términos de su valor máximo o mínimo. En su lugar, estamos explorando todas las combinaciones para encontrar aquellas que satisfagan el criterio establecido."
       ],
       "metadata": {
         "id": "Ni5dAQ-agRit"
       }
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "pDA-rg3Gj5Lz"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -627,12 +661,13 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CJb5sQ0qkENy"
+        "id": "CJb5sQ0qkENy",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "4fb728f7-68c4-4117-f748-e2719693d301"
       },
       "source": [
-        "# Validación del valor de entrada\n",
-        "%%time\n",
-        "\n",
         "# Listas de números y operadores\n",
         "numeros = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
         "operadores = ['+', '-', '*', '/']\n",
@@ -654,12 +689,34 @@
         "df = pd.DataFrame({'Expresión': expresiones, 'Resultado': resultados})\n",
         "df = df[df['Resultado'] == valor_objetivo]\n",
         "\n",
-        "\n",
         "# Mostrar el DataFrame\n",
         "print(df)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 82,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "        Expresión  Resultado\n",
+            "2983    1-2+7/3*9       20.0\n",
+            "3486    1-2+7*9/3       20.0\n",
+            "4399    1-2+9/3*7       20.0\n",
+            "4806    1-2+9*7/3       20.0\n",
+            "8042    1+3*7-4/2       20.0\n",
+            "...           ...        ...\n",
+            "360653  9+8/4*7-3       20.0\n",
+            "360688  9*8/4+7-5       20.0\n",
+            "361755  9+8*6/3-5       20.0\n",
+            "361803  9+8*6/4-1       20.0\n",
+            "362571  9+8*7/4-3       20.0\n",
+            "\n",
+            "[1344 rows x 2 columns]\n",
+            "CPU times: user 3.28 s, sys: 8.86 ms, total: 3.29 s\n",
+            "Wall time: 3.31 s\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -667,26 +724,45 @@
         "id": "tgrnsC2nkFa8"
       },
       "source": [
-        "Calcula la complejidad del algoritmo por fuerza bruta"
+        "Calcula la complejidad del algoritmo por fuerza bruta\n",
+        "\n",
+        "Para analizar su complejidad, consideramos los siguientes pasos::"
       ]
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "9eUd3xwckP68"
-      },
       "source": [
-        "Respuesta"
-      ]
-    },
-    {
-      "cell_type": "code",
+        "1. **Generar Permutaciones de Números**:\n",
+        "    - Total de permutaciones posibles de 5 números seleccionados de una lista de 9:\n",
+        "      $$ P(9, 5) = \\frac{9!}{(9-5)!} = 15120 $$\n",
+        "\n",
+        "2. **Generar Permutaciones de Operadores**:\n",
+        "    - Total de permutaciones posibles de 4 operadores seleccionados de una lista de 4:\n",
+        "      $$ P(4, 4) = 4! = 24 $$\n",
+        "\n",
+        "3. **Evaluar Expresiones**:\n",
+        "    - Total de expresiones generadas y evaluadas:\n",
+        "      $$ P(9, 5) \\times P(4, 4) = 15120 \\times 24 = 362880 $$\n",
+        "\n",
+        "### Conclusión\n",
+        "\n",
+        "La complejidad total del algoritmo es:\n",
+        "\n",
+        "$$ O(\\text{total}) = O(P(9, 5)) \\times O(P(4, 4)) = O(15120) \\times O(24) = O(362880) $$\n",
+        "\n",
+        "Esto se simplifica a:\n",
+        "\n",
+        "$$ O(\\text{total}) = O(n!) $$\n",
+        "\n",
+        "donde \\( n \\) es el número de elementos de los cuales se toman las permutaciones. En este caso específico:\n",
+        "\n",
+        "$$ O(9!) = O(362880) $$\n",
+        "\n",
+        "En resumen, la complejidad del algoritmo de fuerza bruta es factorial en la cantidad de números permutados, lo que lo hace altamente ineficiente para grandes conjuntos de entrada.\n"
+      ],
       "metadata": {
-        "id": "rvZWwL-ckRST"
-      },
-      "source": [],
-      "execution_count": null,
-      "outputs": []
+        "id": "nllCXFwJ2wAy"
+      }
     },
     {
       "cell_type": "markdown",
