--- a/Seminario_Algoritmos.ipynb
+++ b/Seminario_Algoritmos.ipynb
@@ -125,6 +125,7 @@
         "\n",
         "# Crear un DataFrame con las expresiones y los resultados\n",
         "df = pd.DataFrame({'Expresión': expresiones_resultantes, 'Resultado': [valor_objetivo] * len(expresiones_resultantes)})\n",
+        "\n",
         "df= df[df['Resultado'] == valor_objetivo]\n",
         "\n",
         "# Mostrar el DataFrame\n",
@@ -135,9 +136,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9I29clTpiHec",
-        "outputId": "22e271f2-7518-4880-e876-c094d38c360a"
+        "outputId": "968a9277-e11c-45e6-8912-be9e3615d3b0"
       },
-      "execution_count": 117,
+      "execution_count": 138,
       "outputs": [
         {
           "output_type": "stream",
@@ -145,6 +146,8 @@
           "text": [
             "\n",
             "Por favor ingrese el valor deseado como resultado en la expresión: 4\n",
+            "Valor mínimo: 4\n",
+            "Valor máximo: 4\n",
             "      Expresión  Resultado\n",
             "0     1-2*3/6+4          4\n",
             "1     1-2/3*6+7          4\n",
@@ -663,7 +666,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "9667371a-fa06-4f6e-d841-e178075b0ae5"
+        "outputId": "61091570-5ded-449d-fc65-f7c9ad9e3b39"
       },
       "source": [
         "# Listas de números y operadores\n",
@@ -686,6 +689,9 @@
         "# Crear un DataFrame con las expresiones y los resultados\n",
         "df = pd.DataFrame({'Expresión': expresiones, 'Resultado': resultados})\n",
         "\n",
+        "minimo_fuerza_bruta = df['Resultado'].min()\n",
+        "maximo_fuerza_bruta = df['Resultado'].max()\n",
+        "\n",
         "filtered_df = df[df['Resultado'].isin([1, 2, 3, 4, 5, 6, 7, 8, 9])]\n",
         "\n",
         "\n",
@@ -707,7 +713,7 @@
         "# Mostrar el DataFrame\n",
         "print(df)"
       ],
-      "execution_count": 118,
+      "execution_count": 141,
       "outputs": [
         {
           "output_type": "stream",
@@ -727,6 +733,48 @@
             "361905  9-8*6/4+7        4.0\n",
             "\n",
             "[2112 rows x 2 columns]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- ¿Qué valor máximo y mínimo se pueden obtener según las condiciones del problema?\n",
+        "\n",
+        "- ¿Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo ?"
+      ],
+      "metadata": {
+        "id": "IiOogwSfNF0d"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"Valor mínimo:\", minimo_fuerza_bruta)\n",
+        "print(\"Valor máximo:\", maximo_fuerza_bruta)\n",
+        "\n",
+        "if minimo_fuerza_bruta < 1 and maximo_fuerza_bruta > 9:\n",
+        "    print(\"Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo\")\n",
+        "else:\n",
+        "    print(\"No es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo\")"
+      ],
+      "metadata": {
+        "id": "MYbmP2jiNHdR",
+        "outputId": "d5c1a08c-2592-4ac5-ce20-8bb24ab3f003",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 143,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Valor mínimo: -70.71428571428571\n",
+            "Valor máximo: 78.83333333333333\n",
+            "Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo\n"
           ]
         }
       ]
