--- a/Seminario_Algoritmos.ipynb
+++ b/Seminario_Algoritmos.ipynb
@@ -28,7 +28,10 @@
         "id": "hVbXYX-RfPWh"
       },
       "source": [
+        "---\n",
         "# Algoritmos de optimización - Seminario<br>\n",
+        "---\n",
+        "\n",
         "Nombre y Apellidos: Jose Antonio Gómez Vargas\n",
         "\n",
         "Url: https://github.com/jagvgithub/Algortimos_optimizacion_VIU/blob/main/Seminario_Algoritmos.ipynb<br>\n",
@@ -69,7 +72,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Divide y vencerás"
+        "---\n",
+        "# Divide y vencerás\n",
+        "---\n"
       ],
       "metadata": {
         "id": "-m_yXEzljBon"
@@ -169,7 +174,17 @@
     {
       "cell_type": "markdown",
       "source": [
-        "(*)¿Cuantas posibilidades hay sin tener en cuenta las restricciones?<br>"
+        "\n",
+        "---\n",
+        "* ¿Cuantas posibilidades hay sin tener en cuenta las restricciones?<br>\n",
+        "\n",
+        "* ¿Cuantas posibilidades hay teniendo en cuenta todas las restricciones?\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "---\n"
       ],
       "metadata": {
         "id": "tiB6proPORpU"
@@ -178,7 +193,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "¿Cuantas posibilidades hay teniendo en cuenta todas las restricciones."
+        "* ¿Cuantas posibilidades hay teniendo en cuenta todas las restricciones."
       ],
       "metadata": {
         "id": "0_rBoR6nTZPk"
@@ -553,8 +568,12 @@
         "id": "dzynfVJahHoY"
       },
       "source": [
+        "---\n",
         "Modelo para el espacio de soluciones<br>\n",
-        "(*) ¿Cual es la estructura de datos que mejor se adapta al problema? Argumentalo.(Es posible que hayas elegido una al principio y veas la necesidad de cambiar, arguentalo)\n"
+        "\n",
+        "---\n",
+        "\n",
+        "* ¿Cual es la estructura de datos que mejor se adapta al problema? Argumentalo.(Es posible que hayas elegido una al principio y veas la necesidad de cambiar, argumente)\n"
       ]
     },
     {
@@ -609,8 +628,12 @@
         "id": "7Z9U2W7bi-XS"
       },
       "source": [
+        "---\n",
         "Según el modelo para el espacio de soluciones<br>\n",
-        "(*)¿Cual es la función objetivo?\n",
+        "\n",
+        "---\n",
+        "\n",
+        "* ¿Cual es la función objetivo?\n",
         "\n"
       ]
     },
@@ -626,7 +649,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "(*)¿Es un problema de maximización o minimización?"
+        "* ¿Es un problema de maximización o minimización?"
       ],
       "metadata": {
         "id": "TXkffH04vKbx"
@@ -647,7 +670,10 @@
         "id": "rlnTYgY1j6I2"
       },
       "source": [
-        "Diseña un algoritmo para resolver el problema por fuerza bruta"
+        "---\n",
+        "Diseña un algoritmo para resolver el problema por fuerza bruta\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -656,7 +682,10 @@
         "id": "70rDgxYXkC8r"
       },
       "source": [
-        "# Fuerza bruta"
+        "---\n",
+        "# Fuerza bruta\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -740,9 +769,13 @@
     {
       "cell_type": "markdown",
       "source": [
+        "---\n",
+        "\n",
         "- ¿Qué valor máximo y mínimo se pueden obtener según las condiciones del problema?\n",
         "\n",
-        "- ¿Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo ?"
+        "- ¿Es posible encontrar todos los valores enteros posibles entre dicho mínimo y máximo ?\n",
+        "\n",
+        "---"
       ],
       "metadata": {
         "id": "IiOogwSfNF0d"
@@ -785,8 +818,10 @@
         "id": "tgrnsC2nkFa8"
       },
       "source": [
+        "---\n",
         "Calcula la complejidad del algoritmo por fuerza bruta\n",
         "\n",
+        "---\n",
         "Para analizar su complejidad, consideramos los siguientes pasos::"
       ]
     },
@@ -805,7 +840,6 @@
         "    - Total de expresiones generadas y evaluadas:\n",
         "      $$ P(9, 5) \\times P(4, 4) = 15120 \\times 24 = 362880 $$\n",
         "\n",
-        "### Conclusión\n",
         "\n",
         "La complejidad total del algoritmo es:\n",
         "\n",
@@ -819,7 +853,7 @@
         "\n",
         "$$ O(9!) = O(362880) $$\n",
         "\n",
-        "En resumen, la complejidad del algoritmo de fuerza bruta es factorial en la cantidad de números permutados, lo que lo hace altamente ineficiente para grandes conjuntos de entrada.\n"
+        "_En resumen, la complejidad del algoritmo de fuerza bruta es factorial en la cantidad de números permutados, lo que lo hace altamente ineficiente para grandes conjuntos de entrada._\n"
       ],
       "metadata": {
         "id": "nllCXFwJ2wAy"
@@ -831,7 +865,11 @@
         "id": "txbrmLmskReM"
       },
       "source": [
-        "(*)Diseña un algoritmo que mejore la complejidad del algortimo por fuerza bruta. Argumenta porque crees que mejora el algoritmo por fuerza bruta"
+        "\n",
+        "---\n",
+        "Diseña un algoritmo que mejore la complejidad del algortimo por fuerza bruta. Argumenta porque crees que mejora el algoritmo por fuerza bruta\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -848,7 +886,6 @@
         "df_7 = dfs_por_resultado['df_7']\n",
         "df_8 = dfs_por_resultado['df_8']\n",
         "df_9 = dfs_por_resultado['df_9']\n",
-        "\n",
         "\n",
         "filtered_df['Resultado'].value_counts().sort_index()"
       ],
@@ -889,7 +926,10 @@
         "id": "eGDB4K6uk1iN"
       },
       "source": [
-        "(*)Calcula la complejidad del algoritmo"
+        "---\n",
+        "Calcula la complejidad del algoritmo\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -917,7 +957,10 @@
         "id": "3M6QjTsSkmYe"
       },
       "source": [
-        "Según el problema (y tenga sentido), diseña un juego de datos de entrada aleatorios"
+        "---\n",
+        "Según el problema (y tenga sentido), diseña un juego de datos de entrada aleatorios\n",
+        "\n",
+        "---"
       ]
     },
     {
@@ -977,39 +1020,13 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "zy5ZROmjlGo1"
-      },
-      "source": [
-        "Aplica el algoritmo al juego de datos generado\n",
-        "\n",
-        "\n"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "eTFWUJQrtGcv"
-      },
-      "source": [
-        "Enumera las referencias que has utilizado(si ha sido necesario) para llevar a cabo el trabajo"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "YKQ_mRBttWsP"
-      },
-      "source": [
-        "Respuesta"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "kAkDPUyRtYyH"
       },
       "source": [
-        "Describe brevemente las lineas de como crees que es posible avanzar en el estudio del problema. Ten en cuenta incluso posibles variaciones del problema y/o variaciones al alza del tamaño"
+        "---\n",
+        "Describe brevemente las lineas de como crees que es posible avanzar en el estudio del problema. Ten en cuenta incluso posibles variaciones del problema y/o variaciones al alza del tamaño\n",
+        "\n",
+        "---"
       ]
     },
     {
