--- a/Seminario_Algoritmos.ipynb
+++ b/Seminario_Algoritmos.ipynb
@@ -1160,15 +1160,15 @@
       "source": [
         "# Acceder a los DataFrames independientes por su nombre\n",
         "\n",
-        "df_1 = dfs_por_resultado['df_1'] # posibles solcuiones para el valor 1\n",
-        "df_2 = dfs_por_resultado['df_2'] # posibles solcuiones para el valor 2\n",
-        "df_3 = dfs_por_resultado['df_3'] # posibles solcuiones para el valor 3\n",
-        "df_4 = dfs_por_resultado['df_4'] # posibles solcuiones para el valor 4\n",
-        "df_5 = dfs_por_resultado['df_5'] # posibles solcuiones para el valor 5\n",
-        "df_6 = dfs_por_resultado['df_6'] # posibles solcuiones para el valor 6\n",
-        "df_7 = dfs_por_resultado['df_7'] # posibles solcuiones para el valor 7\n",
-        "df_8 = dfs_por_resultado['df_8'] # posibles solcuiones para el valor 8\n",
-        "df_9 = dfs_por_resultado['df_9'] # posibles solcuiones para el valor 9\n",
+        "df_1 = dfs_por_resultado['df_1'] # posibles soluciones para el valor 1\n",
+        "df_2 = dfs_por_resultado['df_2'] # posibles soluciones para el valor 2\n",
+        "df_3 = dfs_por_resultado['df_3'] # posibles soluciones para el valor 3\n",
+        "df_4 = dfs_por_resultado['df_4'] # posibles soluciones para el valor 4\n",
+        "df_5 = dfs_por_resultado['df_5'] # posibles soluciones para el valor 5\n",
+        "df_6 = dfs_por_resultado['df_6'] # posibles soluciones para el valor 6\n",
+        "df_7 = dfs_por_resultado['df_7'] # posibles soluciones para el valor 7\n",
+        "df_8 = dfs_por_resultado['df_8'] # posibles soluciones para el valor 8\n",
+        "df_9 = dfs_por_resultado['df_9'] # posibles soluciones para el valor 9\n",
         "\n",
         "display(filtered_df['Resultado'].value_counts().sort_index())"
       ],
